fix: clipboard items align fixed

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -166,15 +166,6 @@ ul, li{
   flex-direction: column;
   padding: 20px;
 
-  @media only screen and (min-width: 900px) {
-    li {
-      display: inline-block;
-      max-width: 400px;
-      word-wrap: break-word;
-      align-items: baseline;
-    }
-  }
-
   h1 {
     margin-top: 8vh;
     font-size: 1.9rem;
@@ -187,14 +178,28 @@ ul, li{
   }
 
   .clipboard-tools-items {
+    display: flex;
+
+    @media only screen and (max-width: 900px) {
+      flex-direction: column;
+    }
+
     h1 {
       font-size: 1.6rem;
       margin-top: 5vh;
     }
 
     img {
-      margin: auto;
-      display: block;
+      width: auto;
+      height: 50px;
+    }
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 400px;
+      word-wrap: break-word;
     }
   }
 }
@@ -288,9 +293,10 @@ footer {
       color: hsl(210, 10%, 33%);
       margin-bottom: 15px;
       cursor: pointer;
+      transition: all 0.3s ease 0s;
 
       &:hover{
-        color: hsl(171, 66%, 44%);;
+        color: hsl(171, 66%, 44%);
       }
     }
   }
@@ -306,7 +312,7 @@ footer {
       cursor: pointer;
 
       &:hover{
-        color: hsl(171, 66%, 44%);;
+        color: hsl(171, 66%, 44%);
       }
     }
   }
